--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,16 +11,16 @@
 
     <Button
         android:id="@+id/scanBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="137dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:layout_marginStart="163dp"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="73dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginEnd="133dp"
+        android:layout_marginBottom="195dp"
         android:backgroundTint="#0F9D58"
         android:text="выбрать" />
 
